- Fixed bug #49472 (Constants defined in Interfaces can be overridden)